--- a/Frontend/src/Pages/Components/Css.css
+++ b/Frontend/src/Pages/Components/Css.css
@@ -34,3 +34,13 @@
   border-width: 0 2px 2px 0;
   transform: rotate(45deg);
 }
+
+/* Archivo CSS */
+.scroll-hidden::-webkit-scrollbar {
+  display: none; /* Ocultar la barra en navegadores basados en WebKit */
+}
+
+.scroll-hidden {
+  scrollbar-width: none; /* Ocultar la barra en Firefox */
+}
+
